removed comments, fixed scrollbar issue

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -4,7 +4,7 @@
 }
 
 .Footer {
-  background-color: rgb(18, 16, 19);
+
   width: 100%;
   height: 12%;
   bottom: 0;
@@ -13,16 +13,17 @@
 }
 .Navbar {
   display: flex;
-
+  padding-top:10px;
+  padding-bottom: 10px;
   justify-content: space-between;
   width: 100%;
   align-items: center;
-  height: 100%;
 }
 .Przyciski {
-  padding-right: 2%;
-
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 2%;
   float: right;
   height: 100%;
 }
@@ -44,7 +45,7 @@ ul {
   font-size: large;
   align-items: center;
   justify-content: center;
-  /* padding-left: 5px; */
+
 }
 .lista1,
 .lista2,
@@ -144,7 +145,7 @@ ul {
   display: none;
 }
 
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 1010px) {
   .podstopka {
     float: left;
   }
